<resources>
    <string name="app_name">Fluency Drill</string>
    <string name="directions">Click the empty box and press the start button to play.</string>
    <string name="startBtnText">Start</string>
    <string name="leaderboardHeader">Top 3 fastest times with 100% accuracy</string>
    <string name="slot1">1: </string>
    <string name="slot2">2: </string>
    <string name="slot3">3: </string>
    <string name="impossibleModeSwitchText">Impossible Mode?</string>
    <string name="impossibleModeRecord">Fastest time in impossible mode: </string>
    <string name="enterBtnText">Enter</string>
    <string name="backBtnText">Back</string>
    <string name="quitBtnText">Quit</string>
</resources>