<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/thirdA"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="238dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck, LabelFor"
        android:autofillHints="" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/fluencyDrill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:scaleX="3"
            android:scaleY="3"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/direction"
            android:layout_width="393dp"
            android:layout_height="34dp"
            android:layout_marginTop="48dp"
            android:text="@string/directions"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fluencyDrill"
            tools:text="Click the empty box and press the start button to play." />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="43dp"
            android:text="@string/startBtnText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direction" />

        <TextView
            android:id="@+id/leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/leaderboardHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startBtn" />

        <TextView
            android:id="@+id/firstPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/slot1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard" />

        <TextView
            android:id="@+id/secondPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/slot2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPlace" />

        <TextView
            android:id="@+id/thirdPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/slot3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondPlace" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/impossibleModeSwitchText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdPlace" />

        <TextView
            android:id="@+id/hardLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/impossibleModeRecord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <EditText
            android:id="@+id/firstQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/secondQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/thirdQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/fourthQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/fifthQ"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthQ"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/firstA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/secondA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstA"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/fourthA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondA"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <EditText
            android:id="@+id/fifthA"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="238dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthA"
            tools:ignore="SpeakableTextPresentCheck, LabelFor"
            android:autofillHints="" />

        <Button
            android:id="@+id/enterBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/enterBtnText"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toBottomOf="@+id/fifthA" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/backBtnText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifthQ" />

        <Button
            android:id="@+id/quitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/quitBtnText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>